# cvms

./: .editorconfig  .env  .gitignore  Cargo.toml  README.md  install-deps.sh  package-lock.json  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  FLOW.md  README.md
patches/sqlx-mysql/: Cargo.toml  lib.rs
scripts/: README.md
src/: auth.rs  cache.rs  config.rs  cpi.rs  db.rs  error.rs  lib.rs  main.rs  metrics.rs  notify.rs  ops.rs  security.rs  solana_client.rs  telemetry.rs  vault.rs
src/api/: mod.rs  routes.rs  ws.rs
src/protocols/: marginfi.rs  mod.rs  solend.rs
src/tasks/: balance_monitor.rs  event_indexer.rs  mod.rs  monitor.rs  reconciliation.rs  timelocks.rs  yield_tasks.rs
tests/: README.md  cpi_manager_tests.rs  e2e_api_endpoints.rs  e2e_balance_tracker.rs  e2e_complete_flow.rs  e2e_cpi_manager.rs  e2e_database_schema.rs  e2e_performance.rs  e2e_security.rs  e2e_transaction_builder.rs  e2e_vault_lifecycle.rs  e2e_vault_monitor.rs  e2e_websocket.rs  integration_tests.rs  test_utils.rs  vault_manager_tests.rs
