[package]
name = "cvmsback"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "json", "ws"] }
dotenvy = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = "0.3"

# Database
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid", "time", "macros"] }

# Auth / crypto
jsonwebtoken = "9"
ed25519-dalek = { version = "1.0.1", features = ["rand"] }
futures = "0.3"
bs58 = "0.5"
base64 = "0.21"

# Solana
solana-sdk = "1.18"
solana-client = "1.18"
anchor-client = { version = "0.30", optional = true }
spl-associated-token-account = "2"
spl-token = "4"

[features]
anchor = ["anchor-client"]
