[package]
name = "cvmsback"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "json", "ws"] }
dotenvy = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
bincode = "1"

# Database
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid", "time", "macros"] }

# Auth / crypto
jsonwebtoken = "9"
ed25519-dalek = { version = "2", default-features = true }
futures = "0.3"
bs58 = "0.5"
sha2 = "0.10"
base64 = "0.21"
totp-rs = { version = "5", default-features = false, features = ["otpauth", "gen_secret", "serde_support"] }
data-encoding = "2"

# Solana
solana-sdk = "1.18.26"
solana-client = "1.18.26"
solana-transaction-status = "1.18.26"
anchor-client = { version = "0.30", optional = true }
spl-associated-token-account = "2"
spl-token = "4.0.0"
tower_governor = { version = "0.4", default-features = false, features = ["axum"] }

[features]
anchor = ["anchor-client"]

[dev-dependencies]
rand = "0.8"

[patch.crates-io]
spl-token = "=4.0.0"
